# FSIA

./: .gitignore  index.md
documents/: HistoriaIA.tex  Makefile  acronims.tex  biblio.bib  historiaIA.tex  ia_historia.tex  ia_presentifutur.tex  inteligencia.tex  introduccio.tex  lliure.tex  main.tex  moviments.tex  presentifutur.tex  privatiu.tex  soft_llicencies.tex  soft_lliure.tex  soft_moviments.tex  soft_privatiu.tex  soft_propietari.tex  software.tex  test.tex  tipussoftware.tex
documents/biblios/: biblio.bib  biblio_gonzalo.bib  soft_lliure.bib  soft_privatiu.bib  soft_propietari.bib  software_lliure.bib
documents/conceptes/: Makefile  main.tex  soft_moviments.tex
documents/conceptes/biblios/: biblio.bib  biblio_gonzalo.bib  soft_propietari.bib  software_lliure.bib
documents/conceptes/data/: Menuet.mscz  Menuet.xml
documents/data/: Menuet bass.mscz  Menuet solo.mscz  Menuet solo.xml  Menuet.mscz
documents/procediments/: Makefile  ac.tex  main.tex
documents/procediments/biblio/: main.bib
documents/procediments/biblio/conceptes/: main.bib
documents/procediments/sections/: ann.tex  app.tex  conclusio.tex  d1.tex  d2.tex  d3.tex  intro.tex
documents/procediments/sections/conc/: ia_historia.tex  inteligencia.tex  introduccio.tex  soft_llicencies.tex  soft_lliure.tex  soft_moviments.tex  soft_propietari.tex  software.tex
programa/: CMakeLists.txt  br.sh  llista_demos.md.txt
programa/complete/: CMakeLists.txt  core.cpp  core.hpp  display.cpp  main.cpp  types.hpp
programa/core/: CMakeLists.txt  helpers.cpp  helpers.hpp  main.cpp  neuralNetwork.cpp  neuralNetwork.hpp  neuralNetwork.hpp.old
programa/core/include/: base.hpp
programa/core/src/: base.cpp  helpers.cpp
programa/core_antic/: neuralNetwork.cpp.old  old.cpp.old
programa/demos/: CMakeLists.txt  base.hpp  demo_1.cpp  demo_1.hpp  demo_2.cpp  demo_2.hpp  main.cpp
programa/demos/include/: demo_1.hpp  demo_2.hpp  demo_3.hpp  demo_4.hpp
programa/demos/src/: demo_1.cpp  demo_2.cpp  demo_3.cpp  demo_4.cpp  main.cpp
programa/extlibs/: CMakeLists.txt
programa/inc/: display.hpp  types.hpp
programa/src/: display.cpp  main.cpp
