CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(VERSION_LOW 1)
SET(VERSION_UP 0)

PROJECT(FSIA C CXX)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmk/" ${CMAKE_MODULE_PATH})

SET(SFML_ROOT "/sfml/2.1/")

SET(COMPILE_FLAGS "-std=c++11 -g -Wall -Wextra")

ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(demos)
