CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(VERSION_LOW 1)
SET(VERSION_UP 0)

PROJECT(FSIA C CXX)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmk/" ${CMAKE_MODULE_PATH})
SET(SFML_ROOT "/sfml/2.1/")
SET(COMPILE_FLAGS "-std=c++11 -g -Wall -Wextra")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/extlibs/fann/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/extlibs/tinyxml2/include)

IF( CMAKE_SIZEOF_VOID_P EQUAL 8 )
	SET(EXEC_NAME demos_64)
	SET(LIB_NAME ailib_64)
	SET(EXTLIB_NAME extlib_64)
ELSE()
	SET(EXEC_NAME demos_32)
	SET(LIB_NAME ailib_32)
	SET(EXTLIB_NAME extlib_32)
ENDIF()

ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(demos)
ADD_SUBDIRECTORY(extlibs)
