SET(PNAME core)
PROJECT(${PNAME})

IF(UNIX)
	SET(CMAKE_CXX_FLAGS "-std=c++11 -Wall")
ELSEIF(WIN32)
	# Set flags... somehow?
ENDIF()

SET_TARGET_PROPERTIES(${EXECUTABLE_NAME} PROPERTIES DEBUG_POSTFIX _d)

FILE(GLOB_RECURSE HDRS "${PROJECT_SOURCE_DIR}/*.hpp" "${PROJECT_SOURCE_DIR}/*.h")
FILE(GLOB_RECURSE SRCS "${PROJECT_SOURCE_DIR}/*.cpp" "${PROJECT_SOURCE_DIR}/*.c")

ADD_EXECUTABLE(${PNAME} ${SRCS} ${HDRS})

FIND_PACKAGE(SFML 2.1 REQUIRED system window graphics network audio)
IF(SFML_FOUND)
	INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(${PNAME} ${SFML_LIBRARIES})
ENDIF()

SET(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR}/../bin/${PNAME})

