FILE(GLOB_RECURSE HDRS "${PROJECT_SOURCE_DIR}/core/*.hpp" "${PROJECT_SOURCE_DIR}/core/*.h")
FILE(GLOB_RECURSE SRCS "${PROJECT_SOURCE_DIR}/core/*.cpp" "${PROJECT_SOURCE_DIR}/core/*.c")

ADD_LIBRARY(NEURALNET ${SRCS})

IF(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
ELSEIF(WIN32)
	# Set flags... somehow?
ENDIF()

FIND_PACKAGE(SFML 2.1 REQUIRED system window graphics network audio)

IF(SFML_FOUND)
	INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(NEURALNET ${SFML_LIBRARIES})
ENDIF()
