FILE(GLOB_RECURSE SRCS "${PROJECT_SOURCE_DIR}/core/*.cpp" "${PROJECT_SOURCE_DIR}/core/*.c")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/core/include)

ADD_LIBRARY(${LIB_NAME} ${SRCS})

IF(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMPILE_FLAGS}")
ENDIF()

FIND_PACKAGE(SFML 2.1 REQUIRED system window graphics network audio)

IF(SFML_FOUND)
	INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(${LIB_NAME} ${SFML_LIBRARIES})
ENDIF()
