IF(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMPILE_FLAGS}")
ELSEIF(WIN32)
	# Set flags... somehow?
ENDIF()

FILE(GLOB_RECURSE HDRS "${PROJECT_SOURCE_DIR}/demos/*.hpp" "${PROJECT_SOURCE_DIR}/demos/*.h")
FILE(GLOB_RECURSE SRCS "${PROJECT_SOURCE_DIR}/demos/*.cpp" "${PROJECT_SOURCE_DIR}/demos/*.c")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/core)

ADD_EXECUTABLE(${EXEC_NAME} ${SRCS} ${HDRS})
TARGET_LINK_LIBRARIES(${EXEC_NAME} ${LIB_NAME})

SET(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR}/bin)

FIND_PACKAGE(SFML 2.1 REQUIRED system window graphics network audio)
IF(SFML_FOUND)
	INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(${EXEC_NAME} ${SFML_LIBRARIES})
ENDIF()

FIND_PACKAGE(Threads)
TARGET_LINK_LIBRARIES(${EXEC_NAME} ${CMAKE_THREAD_LIBS_INIT})
