IF(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMPILE_FLAGS}")
ENDIF()

FILE(GLOB_RECURSE SRCS "${PROJECT_SOURCE_DIR}/demos/*.cpp" "${PROJECT_SOURCE_DIR}/demos/*.c")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/demos/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/core/include)

ADD_EXECUTABLE(${EXEC_NAME} ${SRCS})
TARGET_LINK_LIBRARIES(${EXEC_NAME} ${LIB_NAME})
TARGET_LINK_LIBRARIES(${EXEC_NAME} ${EXTLIB_NAME})

SET(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR}/bin)

FIND_PACKAGE(SFML 2.1 REQUIRED system window graphics network audio)
IF(SFML_FOUND)
	INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(${EXEC_NAME} ${SFML_LIBRARIES})
ENDIF()

FIND_PACKAGE(Threads)
TARGET_LINK_LIBRARIES(${EXEC_NAME} ${CMAKE_THREAD_LIBS_INIT})
